chore: clean Docker image - non-root friendly, remove GC log files