@@ -1,21 +1,13 @@
 #!/bin/bash
-# Copyright 1999-2018 Alibaba Group Holding Ltd.
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-
-#      http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
 set -x
+mkdir -p ${BASE_DIR}/logs ${BASE_DIR}/data
+chmod 777 ${BASE_DIR}/logs ${BASE_DIR}/data 2>/dev/null || true
+
 export CUSTOM_SEARCH_NAMES="application"
 export CUSTOM_SEARCH_LOCATIONS=file:${BASE_DIR}/conf/
 export MEMBER_LIST="$MEMBER_LIST"
 PLUGINS_DIR="/home/nacos/plugins/peer-finder"
+
 function print_servers() {
    if [[ ! -d "${PLUGINS_DIR}" ]]; then
     echo "" >"$CLUSTER_CONF"
@@ -36,9 +28,6 @@ function join_if_exist() {
     fi
 }
 
-#===========================================================================================
-# JVM Configuration
-#===========================================================================================
 Xms=$(join_if_exist "-Xms" ${JVM_XMS})
 Xmx=$(join_if_exist "-Xmx" ${JVM_XMX})
 Xmn=$(join_if_exist "-Xmn" ${JVM_XMN})
@@ -62,16 +51,12 @@ else
   print_servers
 fi
 
-#===========================================================================================
-# Setting system properties
-#===========================================================================================
-# set  mode that Nacos Server function of split
 if [[ "${FUNCTION_MODE}" == "config" ]]; then
   JAVA_OPT="${JAVA_OPT} -Dnacos.functionMode=config"
 elif [[ "${FUNCTION_MODE}" == "naming" ]]; then
   JAVA_OPT="${JAVA_OPT} -Dnacos.functionMode=naming"
 fi
-# set nacos server ip
+
 if [[ ! -z "${NACOS_SERVER_IP}" ]]; then
   JAVA_OPT="${JAVA_OPT} -Dnacos.server.ip=${NACOS_SERVER_IP}"
 fi
@@ -88,7 +73,6 @@ if [[ ! -z "${IGNORED_INTERFACES}" ]]; then
   JAVA_OPT="${JAVA_OPT} -Dnacos.inetutils.ignored-interfaces=${IGNORED_INTERFACES}"
 fi
 
-### If turn on auth system:
 if [[ ! -z "${NACOS_AUTH_ENABLE}" ]]; then
   JAVA_OPT="${JAVA_OPT} -Dnacos.core.auth.enabled=${NACOS_AUTH_ENABLE}"
 fi
@@ -97,14 +81,6 @@ if [[ "${PREFER_HOST_MODE}" == "hostname" ]]; then
   JAVA_OPT="${JAVA_OPT} -Dnacos.preferHostnameOverIp=true"
 fi
 JAVA_OPT="${JAVA_OPT} -Dnacos.member.list=${MEMBER_LIST}"
-
-JAVA_MAJOR_VERSION=$($JAVA -version 2>&1 | sed -E -n 's/.* version "([0-9]*).*$/\1/p')
-if [[ "$JAVA_MAJOR_VERSION" -ge "9" ]]; then
-  JAVA_OPT="${JAVA_OPT} -Xlog:gc*:file=${BASE_DIR}/logs/nacos_gc.log:time,tags:filecount=10,filesize=102400"
-else
-  JAVA_OPT_EXT_FIX="-Djava.ext.dirs=${JAVA_HOME}/jre/lib/ext:${JAVA_HOME}/lib/ext"
-  JAVA_OPT="${JAVA_OPT} -Xloggc:${BASE_DIR}/logs/nacos_gc.log -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=100M"
-fi
 
 JAVA_OPT="${JAVA_OPT} -Dloader.path=${BASE_DIR}/plugins,${BASE_DIR}/plugins/health,${BASE_DIR}/plugins/cmdb,${BASE_DIR}/plugins/selector"
 JAVA_OPT="${JAVA_OPT} -Dnacos.home=${BASE_DIR}"
